--- a/ClientApp/public/index.html
+++ b/ClientApp/public/index.html
@@ -25,6 +25,14 @@
     <meta name="og:title" content="romeyouup" />
     <meta name="og:description" content="Roma, come non l'hai mai vista!" />
     <meta name="og:image" content="https://romeyouup.it/static/media/card.b3cb07f3.jpg" />
+    <script type="text/javascript"
+            src="https://js.api.here.com/v3/3.1/mapsjs-core.js"></script>
+    <script type="text/javascript"
+            src="https://js.api.here.com/v3/3.1/mapsjs-service.js"></script>
+    <script type="text/javascript"
+            src="https://js.api.here.com/v3/3.1/mapsjs-ui.js"></script>
+    <script type="text/javascript"
+            src="https://js.api.here.com/v3/3.1/mapsjs-mapevents.js"></script>
     <title>romeyouup</title>
 </head>
   <body>
